added support for getting a singular user
